--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,4 @@
+/* Updated: 2025-12-23T16:27:38.387Z */
 /* Updated: 2025-12-23T15:51:29.652Z */
 /* Updated: 2025-12-23T12:29:05.283Z */
 @import "tailwindcss";
