--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,4 @@
+/* Updated: 2025-12-24T13:57:06.095Z */
 /* Updated: 2025-12-23T18:46:21.979Z */
 /* Updated: 2025-12-23T16:36:07.839Z */
 /* Updated: 2025-12-23T16:34:27.579Z */
